# gnomon

./: .gitignore  CALIBRATOR_INVESTIGATION.md  Cargo.toml  Cross.toml  FAILURE_ANALYSIS.md  NOTES.md  README.md  all_theorems.txt  biobank_plots.txt  biobank_summary.txt  block_to_replace.lean  build.rs  build_log.txt  build_log_final.txt  build_output.txt  build_output_10.txt  build_output_12.txt  build_output_19.txt  build_output_2.txt  build_output_3.txt  build_output_4.txt  build_output_5.txt  build_output_6.txt  build_output_7.txt  build_output_9.txt  build_output_corrections.txt  build_output_corrections_v2.txt  build_output_restore.txt  build_output_sorry.txt  calibrate_pgs_pc_findings.md  check.py  check_dist.lean  check_holder.lean  check_instance.lean  check_instances.lean  check_integrable.lean  check_jensen.lean  check_lemma.lean  check_lemma_2.lean  check_lemmas.lean  (+154 more)
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: benchmark-project-prefit-microarray.yml  benchmark.yml  build-release-all.yml  compare-cached.yml  compare-ld-window.yml  convert-score.yml  debug-build.yml  debug_build.yml  jules-pr-validator.yml  jules_loop.yml  manual-single-test.yml  profile-fit.yml  project-prefit-model-plots.yml  prover.yml  pypi-publish.yml  release-fit-ld-window.yml  release-fit-projection.yml  release-fit.yml  repro-plink-sample-id.yml  sim_pops.yml  sims-portability.yml  test-release-scheduled.yml  test.yml  train-pca.yml  two_pop_sims.yml  verify-install.yml
.lake/: lakefile.olean  lakefile.olean.trace
.mentat/: format.sh  setup.sh
agents/: experiments_gen0.py  gen0_investigation.md  portability_replication.py  sims_portability_summary.md
agents/mechanism_study/: CAUSAL_ARCH_DEEP_DIVE.md  FINAL_MECHANISM_REPORT.md  MECHANISM_STUDY.md  RIGOROUS_MECHANISM_REPORT.md  causal_arch_deep_dive.py  highpower_mechanism_run.py  model_decomposition.py  rigorous_mechanism_tests.py  run_mechanism_tests.py
agents/portability_results/: PORTABILITY_REPLICATION_REPORT.md  bottleneck_mechanism_analysis.py  ld_vs_hetero_causal.py  (+1 more)
analysis/: calibrator_does_no_harm.md  calibrator_failure.md
bench/: bench.py
benches/: frobenius_norm.rs  model.py  path_benchmark.rs
calibrate/: .gitignore  README.md  alo.rs  basis.rs  bench_calibrate.py  build.rs  calibrator.rs  construction.rs  data.rs  diagnostics.rs  diff.txt  estimate.rs  faer_ndarray.rs  gradient_sign_test.rs  gradient_test.rs  hmc.rs  hull.rs  joint.rs  liability.rs  lib.rs  main.rs  matrix.rs  mod.rs  model.rs  model.toml  pirls.rs  quadrature.rs  report.md  seeding.rs  survival.rs  survival_data.rs  t.py  test_fixtures.rs  types.rs  visualizer.rs
cli/: README.md  all.rs  main.rs
data/: snp_intersection_final_hg38_chrpos.txt
divergence_g20_work/: BayesR.sscore  bayesr.covRes  bayesr.parRes  bayesr.snpRes  bayesr_pred.score  bayesr_pred.sscore  test.bim  test.covar  test.fam  test.keep  test.phen  train.covar  train.fam  train.keep  train.phen
docs/: test_model_realworld_metrics_mistake.md
examples/: PGS.md  PGS_Alzheimer.md  PGS_breast_cancer.md  PGS_cognitive_decline.md  PGS_colorectal_cancer.md  PGS_obesity.md  attenuation.py  biobank_gam_sim.py  convert_score.py  infer_sex.md  metrics_lin_noise.py  regional_PGS.md  repro_cublas_shape.py  repro_cuda_async_free_teardown.py  repro_cudarc_teardown.rs  repro_pip_cublas_abort.py  repro_pip_cublas_abort.sh  repro_score_sigabrt.sh  snp_list_subset.md  snp_list_subset.txt  spline_PGS.md
map/: README.md  builtin.rs  fit.rs  io.rs  main.rs  mod.rs  prefit.rs  progress.rs  project.rs  variant_filter.rs
plan/: RECONCILIATION.md  survival.md  survival_48271.md  survival_59213.md  survival_72953.md  survival_8362.md  web_search_results.md
proofs/: Calibrator.lean  Calibrator.lean.diff  CheckNames.lean  InstanceCheck.lean  ScratchCalibration.lean  ScratchPenalty.lean  SolvePenalty.lean  Test.lean  TestConcave.lean  TestDist.lean  TestGaussian.lean  TestImports.lean  TestJensen.lean  TestLemmas.lean  TestLipschitz.lean  TestPenalty.lean  TestProjection.lean  check_theorem.lean  lake-manifest.json  lakefile.lean  open questions.txt  patch_test.lean  patch_test2.lean  patch_test3.lean
python/: .gitignore  README.md  pyproject.toml
python/gnomon/: __init__.py  _api.py  calibrate.py  map.py
python/tests/: test_gnomon.py
score/: README.md  batch.rs  checkpoint.rs  cloud_docs.txt  complex.rs  cuda_backend.rs  decide.rs  download.rs  genotype_convert.rs  io.rs  kernel.rs  lib.rs  main.rs  mod.rs  native_vcf.rs  pipeline.rs  prepare.rs  reformat.rs  shared.rs  types.rs  vcf_convert.rs
score/tests/: mod.rs  (+6 more)
scripts/: aggregate_timings.py  benchmark_project_prefit_microarray.py  build_intersection_snp_list.py  burn_comments.txt  compare_release_fit_projections.py  export_portability_dashboard_pngs.py  extract_dep_comments.py  faer_comments.txt  generate_release_fit_plots.py  hail_pca.py  jules_loop.py  measure_fit_projection.py  parse_illumina_manifest.py  plot_project_projection.py  requirements-release-fit.txt
shared/: adapt_plink2.rs  build.rs  files.rs  lib.rs  parallel.rs  python_ext.rs
sims/: aggregate_results.py  analyze_methods.py  analyze_training_draft.py  bottleneck_ld_mechanism.py  create_ld_ref.py  evaluate.py  example_gam_usage.py  figure1_msprime_portability.py  figure2_stdpopsim_confounding.py  gen0_orthogonalization.py  generate_summary.py  hpc_run.sh  hpc_run_detached.sh  main.py  metrics.py  plink_utils.py  plot_divergence_auc.py  plot_two_pop_pcs_grid.py  repro_plink_sample_id_split.sh  requirements.txt  sim_pops.py  sim_two_pop.py  split_data.py  train_model.py
src/: README.md  batch.rs  complex.rs  download.rs  io.rs  kernel.rs  lib.rs  main.rs  pipeline.rs  prepare.rs  reformat.rs  report.md  single.rs  types.rs
terms/: README.md  mod.rs  sex.rs
test/: bench.py  perf.py  pylink.py  sim_test.py  test.py
tests/: calibration.rs  check_final.lean  check_new_def.lean  check_thm.lean  check_thm_2.lean  check_thm_3.lean  cli_survival.rs  dual_risk_test.rs  gnomon_all_parity.sh  survival_regression.rs  trusted_reference_artifacts.json
(+1209 files in other folders)
