# ========================================================================================
#
#                         THE CONSTITUTION OF PROJECT GNOMON
#
# ========================================================================================


[workspace]

[package]
name = "gnomon"
version = "0.1.2"
edition = "2024" # Nightly is required
description = "A high-performance engine for polygenic score calculation."
repository = "https://github.com/SauersML/gnomon/"
keywords = ["bioinformatics", "genomics"]
categories = ["science"]

[lib]
path = "score/lib.rs"

[[bin]]
name = "gnomon"
path = "src/main.rs"

[dependencies]
ahash = "0.8.12"
clap = { version = "4.5.46", features = ["derive"] }
memmap2 = "0.9.8"
rayon = "1.11.0"
crossbeam-queue = "0.3.12"
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread", "macros"] }
num_cpus = "1.17.0"
ryu = "1.0.20"
crossbeam-channel = "0.5.15"
natord = "1.0.9"
bumpalo = { version = "3.19.0", features = ["collections"] }
dwldutil = "2.0.4"
indicatif = "0.17"
flate2 = "1.1.2"
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.8.23"
polars = { version = "0.50.0", features = ["csv", "ndarray", "fmt", "lazy"] }
wolfe_bfgs = { git = "https://github.com/SauersML/wolfe_bfgs" }
log = "0.4.27"
faer = "0.22.6"
dyn-stack = "0.13"

planus = "=1.1.1" # cf. https://github.com/pola-rs/polars/issues/24208

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Turn off debug info for regular 'cargo build/test'
debug = 0

[profile.profiling]
inherits = "release"
debug = 1
strip = false

[features]
default = []
no-inline-profiling = []

[lints.rust]
unused_variables = "deny"
dead_code = "deny"
unused_imports = "deny"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
rand_distr = "0.4.3"
tempfile = "3.21"
approx = "0.5"
serde_json = "1.0"

[build-dependencies]
walkdir = "2.5.0"
grep = "0.3.2"

[[bench]]
name = "path_benchmark"
harness = false

