[workspace]

[package]
name = "gnomon"
version = "0.1.2"
edition = "2024" # Nightly is required
description = "A high-performance engine for polygenic scores."
repository = "https://github.com/SauersML/gnomon/"
keywords = ["bioinformatics", "genomics"]
categories = ["science"]
build = "shared/build.rs"

[lib]
path = "shared/lib.rs"
# `rlib` keeps the `[[bin]]` targets and any Rust consumers building against the
# library; `cdylib` produces the loadable Python extension module built by
# maturin/PyO3 when the `python` feature is enabled.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gnomon"
path = "cli/main.rs"
required-features = ["map", "score", "calibrate", "terms"]

[[bin]]
name = "gnomon-score"
path = "cli/main.rs"
required-features = ["score"]

[[bin]]
name = "gnomon-map"
path = "cli/main.rs"
required-features = ["map"]

[[bin]]
name = "gnomon-terms"
path = "cli/main.rs"
required-features = ["terms"]

[[bin]]
name = "gnomon-calibrate"
path = "cli/main.rs"
required-features = ["calibrate"]

[features]
default = ["map", "score", "calibrate", "terms"]
map = []
score = []
terms = []
calibrate = ["dep:gam", "dep:polars"]
bench-path = []
# In-process Python bindings (PyO3). Pulls in the same `score`/`map`/`terms`
# entry points the CLI uses and exposes them through a `#[pymodule]`. Built by
# maturin into the `cdylib` to give `import gnomon` a native, in-process core.
python = ["dep:pyo3", "score", "map", "terms"]

[dependencies]
gam = { version = "0.2.1", optional = true }
ahash = "0.8.12"
clap = { version = "4.5.48", features = ["derive"] }
memmap2 = "0.9.8"
rayon = "1.11.0"
crossbeam-queue = "0.3.12"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
num_cpus = "1.17.0"
rand = "0.10.0"
ryu = "1.0.20"
crossbeam-channel = "0.5.15"
natord = "1.0.9"
bumpalo = { version = "3.19.0", features = ["collections"] }

indicatif = "0.18"
google-cloud-storage = "1.1.0"
google-cloud-auth = "1.0.1"
flate2 = "=1.1.5"
ndarray = { version = "0.17.1", features = ["serde", "rayon"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.7"
polars = { version = "0.51.0", features = ["csv", "ndarray", "parquet"], optional = true }
wolfe_bfgs = "0.2.2"
log = "0.4.28"
faer = "0.23.2"
spindle = "0.2.6"
dyn-stack = "0.13.2"
noodles-bcf = "0.78.0"
noodles-vcf = "0.81.0"
noodles-bgzf = "0.43.0"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
rustls = { version = "0.23.36", features = ["ring"] }
serde_json = "1.0.145"
sysinfo = "0.30.12"
ratatui = "0.30"
crossterm = "0.28.1"
burn = { version = "0.19.1", default-features = false }
cudarc = { version = "0.19.2", default-features = false, features = ["std", "driver", "nvrtc", "cublas", "dynamic-loading", "cuda-12000"] }

# Built-in model download and caching
ureq = "2.10"
sha2 = "0.10"
hex = "0.4"
zstd = "0.13"
dirs = "6.0"

infer_sex = "0.1.0"
convert_genome = { git = "https://github.com/SauersML/convert_genome", rev = "2648e850db4bd0fcc48cd53c075536bd161f6757" }

planus = "=1.1.1" # cf. https://github.com/pola-rs/polars/issues/24208

# PyO3 backs the in-process Python extension module (the `python` feature).
# `extension-module` keeps the cdylib from linking libpython (manylinux/abi3),
# and `abi3-py39` builds a single stable-ABI wheel usable on Python >= 3.9.
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py39"], optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Turn off debug info for regular 'cargo build/test'
debug = 0

[profile.profiling]
inherits = "release"
debug = 1
strip = false

[dependencies.general-mcmc]
version = "0.8.0"
default-features = false

[lints.rust]
unused_variables = "deny"
dead_code = "deny"
unused_imports = "deny"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.10.0"
rand_distr = "0.6.0"
tempfile = "3.21"
approx = "0.5"
reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "rustls-tls"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
logtest = "2"
serial_test = "3.2.0"

[build-dependencies]
walkdir = "2.5.0"
grep = "0.3.2"

[[bench]]
name = "path_benchmark"
harness = false
required-features = ["bench-path"]

[[test]]
name = "score"
path = "score/tests/mod.rs"
required-features = ["score"]

[[example]]
name = "repro_cudarc_teardown"
path = "examples/repro_cudarc_teardown.rs"
required-features = ["score"]

# Run tests at release optimization level for maximum speed
[profile.test]
opt-level = 3            # Same as release - maximum speed for numerical tests

# A transitive reqwest pulls native-tls -> openssl-sys. On Linux (manylinux
# wheel builds) there is no system libssl, so force a vendored/static OpenSSL
# build via feature unification. Linux-only so macOS/Windows are unaffected.
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
