[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "gnomon"
version = "0.1.0"
description = "Python wrapper for SauersML/gnomon (high-performance polygenic score engine)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "SauersML" }]
requires-python = ">=3.9"
dependencies = []
keywords = ["genomics", "bioinformatics", "polygenic-score", "pgs", "plink", "vcf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/SauersML/gnomon"
Issues = "https://github.com/SauersML/gnomon/issues"

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
test = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["gnomon"]
