[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "gnomon-pgs"
version = "0.1.0"
description = "Python bindings for SauersML/gnomon (high-performance polygenic score engine)."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "SauersML" }]
requires-python = ">=3.9"
dependencies = []
keywords = ["genomics", "bioinformatics", "polygenic-score", "pgs", "plink", "vcf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/SauersML/gnomon"
Issues = "https://github.com/SauersML/gnomon/issues"

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
test = ["pytest>=7"]

[tool.maturin]
# The Rust crate lives at the repo root; build the `python` feature into the
# `cdylib`, which produces the native in-process extension module imported as
# `gnomon._gnomon`. `python-source = "."` makes the adjacent `gnomon/` directory
# the Python package, so the pure-Python wrapper modules ship in the same wheel
# and the compiled extension is dropped in alongside them.
manifest-path = "../Cargo.toml"
module-name = "gnomon._gnomon"
python-source = "."
features = ["python"]
